--- a/index.html
+++ b/index.html
@@ -11,9 +11,28 @@
 </head>
 <body>
     <div class="container">
-        <h1>Javascript Практика</h1>
+        <h1>JavaScript Практика</h1>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dicta nemo qui. A amet beatae cumque eaque eligendi eveniet explicabo harum illum in, minus, molestias odit, possimus repellendus sit totam veritatis voluptate voluptates. Blanditiis dolorum eius facere praesentium quia quisquam reiciendis sit. Culpa eius eveniet facilis magni nihil omnis quas qui. Ab ad, alias aut cum debitis deleniti eligendi eos ex excepturi fuga illum itaque obcaecati quas quasi repudiandae rerum, unde! Alias consequuntur eos hic illum itaque molestias possimus repellendus temporibus ut vitae? Aut autem consectetur dicta distinctio earum, et ex id in minus nam ratione reiciendis rerum voluptas. Doloremque.</p>
+    </div>
+
+    <div class="vmodal">
+        <div class="modal-overlay">
+            <div class="modal-window">
+                <div class="modal-header">
+                    <span class="modal-title">Modal title</span>
+                    <span class="modal-close">&times;</span>
+                </div>
+                <div class="modal-body">
+                    <p>Lorem ipsum dolor sit.</p>
+                    <p>Lorem ipsum dolor sit.</p>
+                </div>
+                <div class="modal-footer">
+                    <button>Ok</button>
+                    <button>Cancel</button>
+                </div>
+            </div>
+        </div>
     </div>
 
 <script src="base.js"></script>
