--- a/index.html
+++ b/index.html
@@ -14,38 +14,7 @@
         <h1>JavaScript Практика</h1>
     </div>
 
-    <div class="row">
-        <div class="col">
-            <div class="card">
-                <img class="card-img-top" style="height: 300px;" src="https://e1.edimdoma.ru/data/ingredients/0000/2374/2374-ed4_wide.jpg?1487746348" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Яблоки</h5>
-                    <a href="#" class="btn btn-primary">Посмотреть цену</a>
-                    <a href="#" class="btn btn-danger">Удалить</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img class="card-img-top" style="height: 300px;" src="https://m.dom-eda.com/uploads/images/catalog/item/dfc9a3e974/3cbf3bd41c_1000.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Апельсины</h5>
-                    <a href="#" class="btn btn-primary">Посмотреть цену</a>
-                    <a href="#" class="btn btn-danger">Удалить</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img class="card-img-top" style="height: 300px;" src="https://st3.depositphotos.com/1020804/12760/i/600/depositphotos_127608560-stock-photo-mango-cubes-and-mango-fruit.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Манго</h5>
-                    <a href="#" class="btn btn-primary">Посмотреть цену</a>
-                    <a href="#" class="btn btn-danger">Удалить</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="row" id="fruits"></div>
 
     </div>
 
