--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
 <script src="base.js"></script>
-<script src="plugins/model.js"></script>
+<script src="plugins/modal.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
